# VocoType-linux

./: CHANGELOG.md  pyproject.toml  readme.md  requirements.txt
app/: config.py  funasr_server.py  logging_config.py  slm_local_worker.py  slm_polisher.py  text_normalizer.py
fcitx5/: README.md
fcitx5/addon/: CMakeLists.txt  ipc_client.cpp  ipc_client.h  vocotype.cpp  vocotype.h
fcitx5/backend/: audio_recorder.py  fcitx5_server.py  rime_handler.py
fcitx5/data/: vocotype.conf.in
fcitx5/scripts/: install-fcitx5.sh
ibus/: README.md  engine.py  main.py
scripts/: benchmark_slm_pipeline.py  install-ibus.sh  test-surrounding-probe.sh
test/: test_ibus_install.py  test_slm_polisher.py  test_text_normalizer.py
